Added basic data ingestion to indexing functionality

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,26 @@ __pycache__/
 *.pyo
 .pytest_cache/
 .coverage
+
+# Mac-specific
+
+.DS*Store
+.DS_Store?
+.*\*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Python
+
+**pycache**/
+_.pyc
+_.pyo
+venv/
+.env
+
+# VS Code
+
+.vscode/settings.json
+.vscode/launch.json
