--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ azure-core==1.35.1
 azure-identity==1.25.0
 azure-search-documents==11.5.3
 azure-storage-blob==12.26.0
+beautifulsoup4==4.13.5
 black==25.1.0
+bs4==0.0.2
 certifi==2025.8.3
 cffi==2.0.0
 chardet==5.2.0
@@ -26,6 +28,7 @@ defusedxml==0.7.1
 deprecation==2.1.0
 distro==1.9.0
 dnspython==2.8.0
+fastapi==0.117.1
 flake8==7.3.0
 frozenlist==1.7.0
 google-crc32c==1.7.1
@@ -58,7 +61,7 @@ multidict==6.6.4
 mypy_extensions==1.1.0
 nest-asyncio==1.6.0
 numpy==2.3.3
-openai==1.107.3
+openai==1.108.1
 openapi-core==0.19.5
 openapi-schema-validator==0.6.3
 openapi-spec-validator==0.7.2
@@ -90,6 +93,7 @@ PyMeta3==0.5.1
 pyOpenSSL==25.3.0
 pytest==8.4.2
 python-dotenv==1.1.1
+python-multipart==0.0.20
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.5
@@ -102,19 +106,18 @@ scipy==1.16.2
 semantic-kernel==1.37.0
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.8
 SQLAlchemy==2.0.43
+starlette==0.48.0
+structlog==25.4.0
 tenacity==9.1.2
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 urllib3==2.5.0
+uvicorn==0.36.0
 websockets==15.0.1
 Werkzeug==3.1.1
 yarl==1.20.1
 zipp==3.23.0
 zstandard==0.25.0
-uvicorn
-fastapi
-bs4
-jinja2 
-python-multipart
