Fix Docker file copy order for auth.py

--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -35,6 +35,7 @@ WORKDIR /app
 COPY chunks_with_embeddings.json .
 COPY logging_config.py .
 COPY services.py .
+COPY auth.py .
 COPY templates/ ./templates/
 COPY static/ ./static/
 COPY main.py .
