--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,19 +43,20 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure App Service
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          images: ${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-
-      # Connects to AKS cluster using existing Azure credentials
-      # Updates the deployment to use the same new image that was just pushed
-      # Waits for the rollout to complete (5 minute timeout)
-      # Only runs on main branch pushes (same as App Service)
       - name: Deploy to AKS Learning Cluster
         run: |
           az aks get-credentials --resource-group rg-rag-mvp-free-2 --name aks-rag-learning
+
+          # Update deployment with real environment variables
+          kubectl set env deployment/rag-app \
+            AZURE_OPENAI_ENDPOINT="${{ secrets.AZURE_OPENAI_ENDPOINT }}" \
+            AZURE_OPENAI_KEY="${{ secrets.AZURE_OPENAI_KEY }}" \
+            AZURE_SEARCH_ENDPOINT="${{ secrets.AZURE_SEARCH_ENDPOINT }}" \
+            AZURE_SEARCH_KEY="${{ secrets.AZURE_SEARCH_KEY }}" \
+            OPENAI_API_VERSION="2024-02-15-preview" \
+            AZURE_OPENAI_DEPLOYMENT_NAME="gpt-35-turbo-0125" \
+            AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME="text-embedding-ada-002"
+
           kubectl set image deployment/rag-app rag-app=${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           kubectl rollout status deployment/rag-app --timeout=300s
         if: github.ref == 'refs/heads/main'
